--- a/Dockerfile_bench
+++ b/Dockerfile_bench
@@ -13,7 +13,7 @@ ENV GOPATH $HOME/.local/go
 ENV PATH $PATH:$GOROOT/bin
 
 # MySQL のインストール
-RUN ["/bin/bash", "-c", "debconf-set-selections <<< 'mysql-server mysql-server/root_password password ishocon'"]
+RUN ["/bin/bash", "-c", "debconf-set-selections <<< 'mysql-server mysql-server/root_password password lencon'"]
 RUN ["/bin/bash", "-c", "debconf-set-selections <<< 'mysql-service mysql-server/mysql-apt-config string 4'"]
 RUN apt-get install -y mysql-server
 
